@@ -4,7 +4,9 @@ Changelog
 1.3.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Generate filebeat prospector configs for ftw.structlog and
+  ftw.contentstats logs.
+  [lgraf]
 
 
 1.3.0 (2017-09-11)
